<resources>
    <string name="app_name">Погода</string>

    <string name="town_name">Город:\u0020\u0020</string>
    <string name="no_town">Город неизвестен</string>
    <string name="temperature">Температура:\u0020\u0020</string>
    <string name="humidity">Влажность:\u0020\u0020</string>
    <string name="wind_speed">Скорость ветра:\u0020\u0020</string>

    <string name="exact_town">Введите ваш город</string>
    <string name="exact_temperature">33 C</string>
    <string name="exact_humidity">70%</string>
    <string name="exact_wind_speed">10 м/c</string>

    <string name="to_first_activity">Показать погоду</string>
    <string name="send_email">Отправить по почте.</string>

    <string name="show_temperature">Отображать температуру?</string>
    <string name="show_humidity">Отображать влажность?</string>
    <string name="show_windSpeed">Отображать скорость ветра?</string>
</resources>
