<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_town"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/temperatureLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exact_temperature"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exact_humidity"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/windSpeedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidityData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exact_wind_speed"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>