<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/exact_town"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_first_activity"
        android:onClick="onClick"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="6dp" />

</LinearLayout>